Fixed edit post modal not showing properly on desktop

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -784,6 +784,11 @@ input.login {
     #post-btn {
         width: 6em;
     }
+
+    .modal-content {
+        margin: 10% auto;
+    }
+
     /** ABOUT **/
 
     .aboutArticle {
